--- a/420-14B-FX-A24-TP2/MainWindow.xaml
+++ b/420-14B-FX-A24-TP2/MainWindow.xaml
@@ -12,7 +12,7 @@
                 <StackPanel Orientation="Horizontal">
                     <TextBlock  Text="NOM" FontWeight="Bold"  HorizontalAlignment="Left" Margin="0,0,265,0" />
                     <TextBlock  Text="VILLE" FontWeight="Bold"  HorizontalAlignment="Left" Margin="0,0,150,0" />
-                    <TextBlock  Text="PROVICE" FontWeight="Bold"  HorizontalAlignment="Left" Margin="0,0,130,0"/>
+                    <TextBlock  Text="PROVINCE" FontWeight="Bold"  HorizontalAlignment="Left" Margin="0,0,130,0"/>
                     <TextBlock  Text="DATE" FontWeight="Bold"  HorizontalAlignment="Left" Margin="0,0,50,0" />
 
 
