[Feat] Crée, Supprime et modfie des courses

--- a/420-14B-FX-A24-TP2/FormCourse.xaml
+++ b/420-14B-FX-A24-TP2/FormCourse.xaml
@@ -85,8 +85,8 @@
         </GroupBox>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button x:Name="btnAjouter" Margin="5" Width="100">Ajouter</Button>
-            <Button x:Name="btnAnnuler" Margin="5" Width="100">Annuler</Button>
+            <Button x:Name="btnAjouter" Margin="5" Width="100" Click="btnAjouter_Click">Ajouter</Button>
+            <Button x:Name="btnAnnuler" Margin="5" Width="100" Click="btnAnnuler_Click">Annuler</Button>
         </StackPanel>
     </StackPanel>
 </Window>
