[Feat]Afficher liste coureur

--- a/420-14B-FX-A24-TP2/Fiche du coureur.xaml
+++ b/420-14B-FX-A24-TP2/Fiche du coureur.xaml
@@ -5,39 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_420_14B_FX_A24_TP2"
         mc:Ignorable="d"
-        Title="Fiche_du_coureur" Height="400" Width="300" Loaded="Window_Loaded">
-    <StackPanel Margin="10">
-        <TextBlock x:Name="tbTitre" HorizontalAlignment="Center" FontSize="15" FontWeight="Bold" Margin="10">Modification d'un coureur</TextBlock>
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        Title="Fiche_du_coureur" Height="375" Width="350" Loaded="Window_Loaded">
+    <StackPanel Margin="20">
+        <TextBlock x:Name="tbTitre" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Margin="10">Modification d'un coureur</TextBlock>
         <StackPanel Orientation="Horizontal" >
             <Label Width="80">No. dossard</Label>
             <TextBox x:Name="dossard" Width="50"></TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,5">
             <Label Width="80">Nom</Label>
-            <TextBox x:Name="nom" Width="150"></TextBox>
+            <TextBox x:Name="nom" Width="210"></TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Width="80">Prénom</Label>
-            <TextBox x:Name="prenom" Width="150"></TextBox>
+            <TextBox x:Name="prenom" Width="210"></TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,5">
             <Label Width="80">Ville</Label>
-            <TextBox x:Name="ville" Width="150"></TextBox>
+            <TextBox x:Name="ville" Width="210"></TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Width="80">Pays</Label>
-            <ComboBox x:Name="cboProvince" Width="150"></ComboBox>
+            <ComboBox x:Name="cboProvince" Width="210"></ComboBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,5">
             <Label Width="80">Catégorie</Label>
-            <ComboBox x:Name="cboCategorie" Width="150"></ComboBox>
+            <ComboBox x:Name="cboCategorie" Width="210"></ComboBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
-            <TextBlock Grid.Row="2" Text="Temps" Width="100" Margin="5"/>
+            <TextBlock Grid.Row="2" Text="Temps" Width="80"/>
+            <xctk:TimeSpanUpDown x:Name="tsptemps" Width="100" ShowDays="False" Minimum="0"></xctk:TimeSpanUpDown>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="0,5">
-            <CheckBox x:Name="chkAbandon" Width="100" Margin="5,5,80,"/>
-            
+            <CheckBox Content="Abandon" HorizontalAlignment="Left" Margin="80,0,0,0" VerticalAlignment="Top"/>
         </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="80,0,0,0">
+            <Button x:Name="btnModifier" Width="100">Modifier</Button>
+            <Button x:Name="btnAnnuler" Width="100" Margin="10,0,0,0">Annuler</Button>
+        </StackPanel>
+        
     </StackPanel>
 </Window>
