--- a/420-14B-FX-A24-TP2/FormCourse.xaml
+++ b/420-14B-FX-A24-TP2/FormCourse.xaml
@@ -70,7 +70,7 @@
                             <TextBlock Margin="0,10,50,0" FontWeight="bold">TEMPS</TextBlock>
                             <TextBlock Margin="0,10,0,0" FontWeight="Bold">RANG</TextBlock>
                         </StackPanel>
-                        <ListBox x:Name="lstCoureurs" Margin="10, 0, 10 ,10" Height="150">
+                        <ListBox x:Name="lstCoureurs" Margin="10, 0, 10 ,10" Height="150" FontFamily="Courier New">
 
                         </ListBox>
 
