--- a/420-14B-FX-A24-TP2/FormCoureur.xaml
+++ b/420-14B-FX-A24-TP2/FormCoureur.xaml
@@ -66,7 +66,7 @@
             <CheckBox x:Name="checkBonton" Content="Abandon" HorizontalAlignment="Left" Margin="80,0,0,0" VerticalAlignment="Top"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="80,0,0,0">
-            <Button x:Name="btnBouton" Width="100">Modifier</Button>
+            <Button x:Name="btnAjouter" Width="100">Ajouter</Button>
             <Button x:Name="btnAnnuler" Width="100" Margin="10,0,0,0" Click="btnAnnuler_Click">Annuler</Button>
         </StackPanel>
         
